Fixed some margin issues creating scrollbars (desktop)

--- a/main.css
+++ b/main.css
@@ -63,7 +63,6 @@ body, html {
 	background-color: #000;
 	width: 50%;
 	margin: 0 auto;
-	margin-top: 1%;
 	position: relative;
 	border-radius: 50%;
 }
@@ -80,7 +79,7 @@ body, html {
 	border: 20vw solid;
 	border-top: none;
     border-left: none;
-	border-color: #c30800;
+	border-color: #760800;
 	border-top-right-radius: 20vw;
 }
 
